[package]
name = "gcode-pruebas"
version = "0.1.0"
authors = ["JuanCarlosgg <juancarlos97gg@gmail.com>"]
edition = "2018"


[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
gcode = "0.6.1"
bevy = {version="0.4.0", default-features=false}
bevy_webgl2 = {version="0.4.0", optional=true}
winit = {version = "0.24.0"}
rayon = "1.5.0"


[dependencies.web-sys]
version = "0.3.2"
features = [
  "Window",
  "Document",
  "HtmlElement",
  "Element"
]

# [patch.'https://github.com/bevyengine/bevy']
# bevy = {git = "https://github.com/bevyengine/bevy//", rev="841755aaf23acfd55b375c37390daeb302c5b30b", default-features=false}

# [patch.'https://github.com/mrk-its/bevy_webgl2']
# bevy_webgl2 = {git = "https://github.com/mrk-its/bevy_webgl2//", rev="035236b8d7ec52b8e9e20399662e89c73e4521f6", default-features=false}

[profile.dev]
opt-level = 1

[profile.release]
# lto = true
# opt-level = 's'



