[package]
name = "gcode_viewer"
version = "0.1.0"
authors = ["JuanCarlosgg <juancarlos97gg@gmail.com>"]
edition = "2018"


[features]
default = [
  "bevy/bevy_winit",
]

native = [
  "bevy/bevy_wgpu",
  "bevy/x11"
]

web = [
  "bevy_webgl2",
  "web-sys/Window",
  "web-sys/Document",
  "web-sys/HtmlElement",
  "web-sys/Element",
  "web-sys/FileReader",
  "web-sys/InputEvent",
  "web-sys/Blob",
  "web-sys/DataTransfer",
  "web-sys/FileList",
  "web-sys/File"
]

[dependencies]
gcode = "0.6.1"
bevy =  {version="0.4.0", default-features=false}
bevy_egui = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nfd = "0.0.4"
winit = {version = "0.24.0"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_webgl2 = {version="0.4.2", default-features = false, optional=true}
web-sys = "0.3.2"
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.70"
js-sys = "0.3.47"
lazy_static = "1.4.0"

[patch.crates-io]
#rand = { path = "./deps/rand/"}
bevy_webgl2 = { git = "https://github.com/mvlabat/bevy_webgl2.git", branch = "fix-scissor-test" }


[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 's'
